fix svg overflow

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -83,6 +83,8 @@
   height: 100%;
   cursor: grab;
   touch-action: none;
+  overflow: hidden;
+  position: relative;
 }
 
 .Canvas svg {
